<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Overview category -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/product_overview" />

                <!-- Input fields -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingLeft="4dp">

                    <!-- Name field -->
                    <EditText
                        android:id="@+id/edit_product_name"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_product_name"
                        android:inputType="text" />

                    <!-- Model field -->
                    <EditText
                        android:id="@+id/edit_product_model"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_model"
                        android:inputType="textCapWords" />


                    <!-- Input fields -->
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp">

                        <!-- Price field -->
                        <EditText
                            android:id="@+id/edit_product_price"
                            style="@style/EditorFieldStyle"
                            android:hint="@string/product_price_hint"
                            android:inputType="numberDecimal" />

                        <!-- Units for amount -->
                        <TextView
                            android:id="@+id/currency_symbol"
                            style="@style/EditorUnitsStyle"
                            android:text="@string/currency_symbol" />
                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>


            <!-- Image section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/product_photo"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <!-- Photo -->
                    <ImageView
                        android:id="@+id/edit_product_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxHeight="125dp"
                        android:paddingLeft="4dp"
                        android:scaleType="centerInside"
                        android:layout_gravity="center_horizontal"
                        tools:background="@drawable/icon_camera"
                        />

                    <TextView
                        android:id="@+id/add_or_edit_photo_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="italic"
                        tools:text="Tap to add a photo" />

                </LinearLayout>


            </LinearLayout>

            <!-- Supplier Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label Supplier -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/supplier_info" />

                <!-- Input fields -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingLeft="4dp">

                    <!-- Name field -->
                    <EditText
                        android:id="@+id/edit_product_supplier_name"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_supplier_name"
                        android:inputType="textCapWords" />

                    <!-- E-mail field -->
                    <EditText
                        android:id="@+id/edit_product_supplier_email"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_supplier_email"
                        android:inputType="textEmailAddress" />
                </LinearLayout>
            </LinearLayout>

            <!-- Measurement category -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/container_category_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Label -->
                    <TextView
                        style="@style/CategoryStyle"
                        android:text="@string/category_quantity" />

                    <!-- Input fields -->
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:paddingLeft="4dp">

                        <!-- Quantity field -->
                        <EditText
                            android:id="@+id/edit_product_quantity"
                            style="@style/EditorFieldStyle"
                            android:hint="@string/hint_product_quantity"
                            android:inputType="number" />

                        <!-- Units for amount -->
                        <TextView
                            android:id="@+id/label_amount_units"
                            style="@style/EditorUnitsStyle"
                            android:text="@string/unit_product_quantity" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/rejectProductButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/rejectButtonColor"
                        android:text="@string/reject_product_button"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/addProductButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/add_product_button"
                        android:textColor="@android:color/white"
                        android:backgroundTint="@color/addButtonColor"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>